fix: close button dark mode issue

--- a/frontend/src/_styles/left-sidebar.scss
+++ b/frontend/src/_styles/left-sidebar.scss
@@ -385,10 +385,6 @@
   cursor: pointer;
 }
 
-.close-btn.dark,.back-btn.dark {
-  filter: brightness(0) invert(1);
-}
-
 .suggestion-container {
   h4 {
     margin-top: 2rem;
